--- a/patch_win_2016.yml
+++ b/patch_win_2016.yml
@@ -13,4 +13,11 @@
     reboot: yes
     reboot_timeout: 420
    
-
+#
+# -name: Update Windows
+# win_updates:
+# category_name:
+# - SecurityUpdates
+# - CriticalUpdates
+# reboot: yes
+# reboot_timeout: 420
