--- a/patch_win_2016.yml
+++ b/patch_win_2016.yml
@@ -1,22 +1,21 @@
-- name: Windows Server Patching
-  hosts: win2016
-  gather_facts: yes
-  connection: winrm
-  tasks:
-
-    - name: Windows Update
-      win_updates:
-        category_name:
-        - SecurityUpdates
-        - CriticalUpdates
-      reboot: yes
-      reboot_timeout: 420
-   
+---
+# Ansible playbook to run Windows Update and restart, if required
 #
-# -name: Update Windows
-# win_updates:
-# category_name:
-# - SecurityUpdates
-# - CriticalUpdates
-# reboot: yes
-# reboot_timeout: 420
+# http://docs.ansible.com/ansible/win_updates_module.html
+# https://docs.ansible.com/ansible/win_reboot_module.html
+
+- name:  Windows Update
+  hosts: all
+  gather_facts: false
+  tasks:
+    - name: Running Windows Update
+      win_updates:
+        category_names: ['SecurityUpdates','CriticalUpdates','UpdateRollups', 'Updates', 'DefinitionUpdates']
+      register: result
+
+    # output results
+    - debug: var=result
+    
+    # reboot only if required
+    - win_reboot:
+      when: result.reboot_required
