--- a/patch_win_2016.yml
+++ b/patch_win_2016.yml
@@ -6,7 +6,7 @@
 
 - name:  Windows Update
   hosts: all
-  connection: win_rm
+  ansible_connection=winrm
   gather_facts: false
   tasks:
     - name: Running Windows Update
