--- a/patch_win_2016.yml
+++ b/patch_win_2016.yml
@@ -2,6 +2,7 @@
 
 - name: Install all security, critical, and rollup updates without a scheduled task
   hosts: 192.168.0.44
+  connection: winrm
   tasks:
     - name: Update Windows
       win_updates:
