--- a/patch_win_2016.yml
+++ b/patch_win_2016.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Install all security, critical, and rollup updates without a scheduled task
-  hosts: 192.168.0.44
+  hosts: win2016.sharky.local
   connection: winrm
   tasks:
     - name: Update Windows
