--- a/patch_win_2016.yml
+++ b/patch_win_2016.yml
@@ -2,7 +2,7 @@
 
 - name: Install all security, critical, and rollup updates without a scheduled task
   hosts: win2016.sharky.local
-  connection: winrm
+  transport: winrm
   tasks:
     - name: Update Windows
       win_updates:
